--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,16 @@
         }
     ],
     "support": {
-        "issues": "https://bitbucket.org/AurelioDeRosa/audero-wav-extractor/issues"
+        "email": "aurelioderosa@gmail.com",
+        "issues": "https://bitbucket.org/AurelioDeRosa/audero-wav-extractor/issues",
+        "source": "https://bitbucket.org/AurelioDeRosa/audero-wav-extractor/src"
     },
     "require": {
         "php": ">=5.3.0"
     },
     "autoload": {
         "psr-0": {
-            "Audero\\WavExtractor": "src/"
-        },
-        "target-dir": "Audero/WavExtractor"
+            "Audero": "src/"
+        }
     }
 }
